--- a/lib/oo-hsl-picker.less
+++ b/lib/oo-hsl-picker.less
@@ -2,6 +2,14 @@
   margin: 2rem;
 }
 
+.color-slider {
+  border-radius: 10px;
+  width: 381px;
+  height: 20px;
+  border: 1px solid grey;
+  margin: 1rem;
+}
+
 // Color Swatch
 
 [i-Color-swatch] {
