--- a/lib/oo-hsl-picker.jade
+++ b/lib/oo-hsl-picker.jade
@@ -9,13 +9,20 @@ template(name="ooColorPicker")
     input.js-colorInputHsl(value="{{currentHsl}}")
     input.js-colorInputHex(value="{{currentHex}}")
     br
-    input.js-updateHue(type="range" min="0" max="360" value="{{hue}}" step="1")
-    input.js-updateSaturation(type="range" min="0" max="100" value="{{saturation}}" step="1")
-    input.js-updateLightness(type="range" min="0" max="100" value="{{lightness}}" step="1")
-    +ooHslPickerHueSlider saturation=saturation  lightness=lightness
-    +ooHslPickerSaturationSlider hue=hue lightness=lightness
-    +ooHslPickerLightnessSlider hue=hue saturation=saturation
-    //- +slider min=0 max=360 step=1 value=H
+    +inputStyles hue=hue saturation=saturation  lightness=lightness
+    input.js-updateHue.ooSlide.hueSlide(type="range" min="0" max="360" value="{{hue}}" step="1")
+    input.js-updateSaturation.ooSlide.saturationSlide(type="range" min="0" max="100" value="{{saturation}}" step="1")
+    input.js-updateLightness.ooSlide.lightnessSlide(type="range" min="0" max="100" value="{{lightness}}" step="1")
+    //- +ooHslPickerHueSlider saturation=saturation  lightness=lightness
+    //- +ooHslPickerSaturationSlider hue=hue lightness=lightness
+    //- +ooHslPickerLightnessSlider hue=hue saturation=saturation
+    //- +slider2 min=0 max=360 step=1 value=hue saturation=saturation  lightness=lightness
+    //- +slider3 min=0 max=100 step=1 value=saturation hue=hue  lightness=lightness
+    //- +slider4 min=0 max=100 step=1 value=lightness saturation=saturation  hue=hue
+    //- +ooColorSlider min=0 max=100 step=1 value=lightness saturation=saturation  hue=hue type="ooHslPickerLightnessSlider"
+
+//- template(name="ooColorSlider")
+//-   +Template.dynamic template=type
 
 template(name="ooHslPickerHueSlider")
   .color-slider(style="background: linear-gradient(to right, hsla(0, {{saturation}}%, {{lightness}}%, 1),hsla(10, {{saturation}}%, {{lightness}}%, 1),hsla(20, {{saturation}}%, {{lightness}}%, 1),hsla(30, {{saturation}}%, {{lightness}}%, 1),hsla(40, {{saturation}}%, {{lightness}}%, 1),hsla(50, {{saturation}}%, {{lightness}}%, 1),hsla(60, {{saturation}}%, {{lightness}}%, 1),hsla(70, {{saturation}}%, {{lightness}}%, 1),hsla(80, {{saturation}}%, {{lightness}}%, 1),hsla(90, {{saturation}}%, {{lightness}}%, 1),hsla(100, {{saturation}}%, {{lightness}}%, 1),hsla(110, {{saturation}}%, {{lightness}}%, 1),hsla(120, {{saturation}}%, {{lightness}}%, 1),hsla(130, {{saturation}}%, {{lightness}}%, 1),hsla(140, {{saturation}}%, {{lightness}}%, 1),hsla(150, {{saturation}}%, {{lightness}}%, 1),hsla(160, {{saturation}}%, {{lightness}}%, 1),hsla(170, {{saturation}}%, {{lightness}}%, 1),hsla(180, {{saturation}}%, {{lightness}}%, 1),hsla(190, {{saturation}}%, {{lightness}}%, 1),hsla(200, {{saturation}}%, {{lightness}}%, 1),hsla(210, {{saturation}}%, {{lightness}}%, 1),hsla(220, {{saturation}}%, {{lightness}}%, 1),hsla(230, {{saturation}}%, {{lightness}}%, 1),hsla(240, {{saturation}}%, {{lightness}}%, 1),hsla(250, {{saturation}}%, {{lightness}}%, 1),hsla(260, {{saturation}}%, {{lightness}}%, 1),hsla(270, {{saturation}}%, {{lightness}}%, 1),hsla(280, {{saturation}}%, {{lightness}}%, 1),hsla(290, {{saturation}}%, {{lightness}}%, 1),hsla(300, {{saturation}}%, {{lightness}}%, 1),hsla(310, {{saturation}}%, {{lightness}}%, 1),hsla(320, {{saturation}}%, {{lightness}}%, 1),hsla(330, {{saturation}}%, {{lightness}}%, 1),hsla(340, {{saturation}}%, {{lightness}}%, 1),hsla(350, {{saturation}}%, {{lightness}}%, 1),hsla(360, {{saturation}}%, {{lightness}}%, 1));")
