--- a/lib/oo-hsl-picker.less
+++ b/lib/oo-hsl-picker.less
@@ -10,6 +10,15 @@
   margin: 1rem;
 }
 
+.slider2 {
+  border-radius: 34px;
+
+  .track {
+    background-color: transparent !important;
+    box-shadow: none !important;
+  }
+}
+
 // Color Swatch
 
 [i-Color-swatch] {
@@ -85,3 +94,95 @@
 }
 
 // END: Color Swatch
+
+// Range
+//
+
+input[type=range].ooSlide {
+  -webkit-appearance: none;
+  width: 100%;
+  margin: 6.5px 0;
+  user-select: none;
+}
+input[type=range].ooSlide:focus {
+  outline: none;
+}
+input[type=range].ooSlide::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 23px;
+  cursor: pointer;
+  box-shadow: 1.1px 1.1px 1px #000000, 0px 0px 1.1px #0d0d0d;
+  background: #308ca9;
+  border-radius: 9.7px;
+  border: 1.1px solid #010101;
+}
+input[type=range].ooSlide::-webkit-slider-thumb {
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  border: 1.1px solid #000000;
+  height: 36px;
+  width: 18px;
+  border-radius: 4px;
+  background: #ffffff;
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -7.6px;
+}
+input[type=range].ooSlide:focus::-webkit-slider-runnable-track {
+  // background: ;
+}
+input[type=range].ooSlide::-moz-range-track {
+  width: 100%;
+  height: 23px;
+  cursor: pointer;
+  box-shadow: 1.1px 1.1px 1px #000000, 0px 0px 1.1px #0d0d0d;
+  background: #308ca9;
+  border-radius: 9.7px;
+  border: 1.1px solid #010101;
+}
+input[type=range].ooSlide::-moz-range-thumb {
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  border: 1.1px solid #000000;
+  height: 36px;
+  width: 18px;
+  border-radius: 4px;
+  background: #ffffff;
+  cursor: pointer;
+}
+input[type=range].ooSlide::-ms-track {
+  width: 100%;
+  height: 23px;
+  cursor: pointer;
+  background: transparent;
+  border-color: transparent;
+  color: transparent;
+}
+input[type=range].ooSlide::-ms-fill-lower {
+  background: #1e5769;
+  border: 1.1px solid #010101;
+  border-radius: 19.4px;
+  box-shadow: 1.1px 1.1px 1px #000000, 0px 0px 1.1px #0d0d0d;
+}
+input[type=range].ooSlide::-ms-fill-upper {
+  background: #308ca9;
+  border: 1.1px solid #010101;
+  border-radius: 19.4px;
+  box-shadow: 1.1px 1.1px 1px #000000, 0px 0px 1.1px #0d0d0d;
+}
+input[type=range].ooSlide::-ms-thumb {
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  border: 1.1px solid #000000;
+  height: 36px;
+  width: 18px;
+  border-radius: 4px;
+  background: #ffffff;
+  cursor: pointer;
+  height: 23px;
+}
+input[type=range].ooSlide:focus::-ms-fill-lower {
+  background: #308ca9;
+}
+input[type=range].ooSlide:focus::-ms-fill-upper {
+  background: #5ab4d0;
+}
+
+
