--- a/lib/oo-hsl-picker.jade
+++ b/lib/oo-hsl-picker.jade
@@ -1,7 +1,7 @@
 template(name="ooColorPicker")
   .oo-picker-wrapper
     input.js-colorInput(value="")
-    button(i-Color-swatch style="background-color: {{currentColor}}")
+    button(i-Color-swatch style="background-color: hsl({{hue}}, {{saturation}}%, {{lightness}}%)")
     button(i-Color-swatch class="js-showColorPicker" style="background-color: {{prevColor}}")
     each historyColours
       button(i-Color-swatch style="background-color: {{color}}")
@@ -11,10 +11,10 @@ template(name="ooColorPicker")
     input.js-colorInputHsl(value="{{currentHsl}}")
     input.js-colorInputHex(value="{{currentHex}}")
     br
-    +inputStyles hue=hue saturation=saturation  lightness=lightness
-    input.js-updateHue.js-enableDrag.ooSlide.hueSlide(type="range" min="0" max="360" value="{{hue}}" step="1")
-    input.js-updateSaturation.js-enableDrag.ooSlide.saturationSlide(type="range" min="0" max="100" value="{{saturation}}" step="1")
-    input.js-updateLightness.js-enableDrag.ooSlide.lightnessSlide(type="range" min="0" max="100" value="{{lightness}}" step="1")
+    //- +inputStyles hue=hue saturation=saturation  lightness=lightness
+    input.js-updateHue.js-enableDrag.ooSlide.hueSlide(type="range" min="0" max="360" value="{{hue}}" step="1" $dyn = hueGradient )
+    input.js-updateSaturation.js-enableDrag.ooSlide.saturationSlide(type="range" min="0" max="100" value="{{saturation}}" step="1" $dyn = saturationGradient)
+    input.js-updateLightness.js-enableDrag.ooSlide.lightnessSlide(type="range" min="0" max="100" value="{{lightness}}" step="1" $dyn = lightnessGradient)
     //- +ooHslPickerHueSlider saturation=saturation  lightness=lightness
     //- +ooHslPickerSaturationSlider hue=hue lightness=lightness
     //- +ooHslPickerLightnessSlider hue=hue saturation=saturation
