--- a/lib/oo-hsl-picker.less
+++ b/lib/oo-hsl-picker.less
@@ -103,6 +103,7 @@ input[type=range].ooSlide {
   width: 100%;
   margin: 6.5px 0;
   user-select: none;
+  border-radius: 9.7px;
 }
 input[type=range].ooSlide:focus {
   outline: none;
@@ -112,7 +113,7 @@ input[type=range].ooSlide::-webkit-slider-runnable-track {
   height: 23px;
   cursor: pointer;
   box-shadow: 1.1px 1.1px 1px #000000, 0px 0px 1.1px #0d0d0d;
-  background: #308ca9;
+  background: transparent;
   border-radius: 9.7px;
   border: 1.1px solid #010101;
 }
