--- a/lib/oo-hsl-picker.less
+++ b/lib/oo-hsl-picker.less
@@ -45,6 +45,10 @@
   animation: pulse .6s;
 }
 
+.transition-back {
+  transition: background-color .6s;
+}
+
 .color-slider {
   border-radius: 10px;
   width: 381px;
