--- a/lib/oo-hsl-picker.less
+++ b/lib/oo-hsl-picker.less
@@ -18,6 +18,14 @@
   padding: 2rem;
 }
 
+.scheme-title {
+  background-color: hsla(204, 5%, 18%, 1);
+  color: white;
+  font-size: 1.4em;
+  padding: .8rem;
+  margin: 0;
+}
+
 @keyframes pulse {
   0% {
     transform: scale3d(1, 1, 1);
